--- a/scss/content/_products.scss
+++ b/scss/content/_products.scss
@@ -1,6 +1,5 @@
 .productBG{
 
-    margin-top: -3em;
     padding-bottom: 3em;
     padding-top: 3em;
 }
@@ -21,11 +20,12 @@
     align-items: center;
     text-align: center;
     margin: $gutter;
-    margin-top: ($gutter * 2);
+    margin-top: ($gutter);
     //border:dotted 1px black;
     background: white;
     font-size: .9em;
-    min-height: 20em;
+    min-height: 21em; max-height: 50em;
+    height: auto; // Why does this fix flex grow on IE :)
 
     -webkit-box-shadow: 0 3px 35px rgb(0 0 0 / 10%); 
     box-shadow: 0 3px 35px rgb(0 0 0 / 10%);
@@ -38,7 +38,9 @@
     }
 
     .spreader{
-        margin-top: auto;
+        flex-grow: 1;
+        width: 10px;
+        background: red;
     }
 
     .iContainer{
@@ -46,6 +48,7 @@
         min-width: 5em;
         min-height: 5em;
         border-radius: 50%;
+        margin-top: $gutter;
     }
 
     i{
@@ -73,15 +76,17 @@
 
     p{
         font-size: .8;
-        max-width: 90%;
+        max-width: 97%;
+        font-weight: 400;
         overflow: hidden;
     }
 
     .readMore{
         display: block;
-        width: 10em;
+        width: 8em;
         margin: 0 auto;
         //margin-top: auto;
+        margin-bottom: $gutter;
         padding: .7em;
         font-size: 1.2em;
         border-radius: .2em;
@@ -91,16 +96,21 @@
 
 }
 @media screen and (min-width: 768px){
+    
     .productExtraHelp2{
-        min-height: 22em;
+        min-height: 23em;
     }
 }
 
 @media screen and (min-width: 992px) {
     .productPanel{
-        min-height: 20em;
+        min-height: 21em;
+        height: 0;
     }
 
+    .productExtraHelp2{
+        min-height: 22.4em;
+    }
 
     .productExtraHelp{
         min-height: 25em;
@@ -109,7 +119,7 @@
 
 @media screen and (min-width: 1260px) {
     .productPanel{
-        min-height: 23em;
+        min-height: 24em;
     }
 }
 
